# spgt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/acrobatics_p03_harder_ppltl/: instance.lp  output.lp
examples/acrobatics_p03_ppltl/: instance.lp  output.lp
src/spgt/: __main__.py  names.py  solver.py  translator.py
src/spgt/asp/: clingraph_generator.lp  reg_var_ppltl_planner.lp  regression_planner.lp  regression_variable_planner.lp  regressor.lp  regressor_var_ppltl.lp  regressor_variable.lp  strong_rules.lp  symbols.py
src/spgt/base/: domain.py  logic.py
src/spgt/translator/: translator.py
test/: test_domain.py  test_formula.py  test_formula_ppltl.py  test_translator.py
