[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "spgt"
version = "0.0.1"
authors = [
	{ name="Simon Dowd", email="simon@anldowd.com" },
]

description = "A Planner for Fully Observable Non-Deterministic Planning (FOND) Problems with Temporal Objectives."
readme = "README.md"
requires-python = ">=3.13"

classifiers = [
	"Development Status :: 3 - Alpha",
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]

dependencies = [
	"fond-utils>=0.1.5",
    "pddl>=0.4.3",
	"clingraph>=1.1.2",
	"clingo>=5.7.1"
]

license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Repository = "https://github.com/simo-bimo/spgt"

[project.scripts]
spgt = "spgt.__main__:main"

[tool.setuptools.package-data]
"*" = ["*.lp"]